--- a/page1.css
+++ b/page1.css
@@ -39,13 +39,11 @@ body {
     font-size: 60px;
     margin-top: 0;
     margin-bottom: 10px;
-    font-weight: 900;
 }
 
 .title h2 {
     font-size: 40px;
     margin-top: 0;
-    font-weight: 400;
 }
 
 .bottomThing {
@@ -53,6 +51,10 @@ body {
     grid-row: 3 / span 1;
     background-color: white;
     margin-top: 40px;
+}
+
+#searcbar {
+    
 }
 
 .bottomThing p {    
