--- a/page1.css
+++ b/page1.css
@@ -53,8 +53,26 @@ body {
     margin-top: 40px;
 }
 
-#searcbar {
-    
+.input-group {
+    display: flex;
+    margin-left: 60px;
+}
+
+#searchbar {
+    border-top-left-radius: 10px;
+    border-bottom-left-radius: 10px;
+    border: 1px solid #555;
+    border-right: none;
+    padding: 5px;
+    flex-grow: 1;
+}
+
+#searchicon {
+    border-top-right-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border: 1px solid #555;
+    border-left: none;
+    padding: 5px;
 }
 
 .bottomThing p {    
