Added searchbar styles

--- a/page1.css
+++ b/page1.css
@@ -80,3 +80,17 @@ div.input-group {
     border-radius: 20px;
     box-shadow: 1px 1px 6px -2px rgba(0,0,0,0.44);
 }
+
+div.input-group > input {
+    padding: 10px;
+    border: none;
+    flex-grow: 1;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+}
+
+div.input-group > span {
+    padding: 10px;
+    border-top-right-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
