--- a/page1.css
+++ b/page1.css
@@ -56,23 +56,26 @@ body {
 .input-group {
     display: flex;
     margin-left: 60px;
+    margin-right: 330px;
 }
 
 #searchbar {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
+    border-top-left-radius: 50px;
+    border-bottom-left-radius: 50px;
     border: 1px solid #555;
     border-right: none;
-    padding: 5px;
+    padding: 25px;
     flex-grow: 1;
 }
 
 #searchicon {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
+    border-top-right-radius: 50px;
+    border-bottom-right-radius: 50px;
     border: 1px solid #555;
     border-left: none;
-    padding: 5px;
+    padding: 25px;
+    align-self: center;
+    font-size: 34px;
 }
 
 .bottomThing p {    
@@ -84,10 +87,14 @@ body {
 .bottomThing a {
     font-size: 30px;
     margin-left: 60px;
+    color: rgba(119, 2, 182, 1);
 }
 
-img {
-    height: 60%;
-    margin-top: 20px;
-    margin-right: 25px;
+.nav {
+    margin-top: 30px;
+    margin-right: 30px;
+}
+
+#navigationmenu {
+    font-size: 60px;    
 }
